devops/k8s/nightly/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    kubernetes.io/change-cause: kubectl apply --record=true --filename=-
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/client-header-buffer-size: 100k
    nginx.ingress.kubernetes.io/http2-max-header-size: 96k
    nginx.ingress.kubernetes.io/large-client-header-buffers: 4 100k
    nginx.ingress.kubernetes.io/load-balance: ewma
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 96k
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 100k;
      large_client_header_buffers 4 100k;
  name: paylibero
spec:
  ingressClassName: nginx
  rules:
    - host: core-lara-33e1254e7d-paylibero-nightly.apps.ir-thr-ba1.arvancaas.ir
      http:
        paths:
          - backend:
              service:
                name: core-laravel
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
  # tls:
  #   - hosts:
  #       - core-lara-33e1254e7d-paylibero-nightly.apps.ir-thr-ba1.arvancaas.ir
  #     secretName: core-lara-33e1254e7d-paylibero-nightly-apps-ir-thr-ba1-arvancaas-ir-tls
